--- a/code/foodfinder-application/package.json
+++ b/code/foodfinder-application/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/server": "^5.2.0",
+    "graphql": "^16.12.0",
+    "graphql-tag": "^2.12.6",
     "mongoose": "^9.1.4",
     "next": "16.1.3",
     "react": "19.2.3",
