--- a/code/foodfinder-application/package.json
+++ b/code/foodfinder-application/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/server": "^5.2.0",
+    "@as-integrations/next": "^4.1.0",
     "graphql": "^16.12.0",
     "graphql-tag": "^2.12.6",
     "mongoose": "^9.1.4",
