--- a/code/foodfinder-application/package.json
+++ b/code/foodfinder-application/package.json
@@ -15,6 +15,7 @@
     "graphql-tag": "^2.12.6",
     "mongoose": "^9.1.4",
     "next": "16.1.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
